Delete removed JVM flags
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>